<resources>
    <string name="app_name">POLITRAVEL</string>
    <string name="bienvenida">Benvingut a l\'aplicació de gestió de paquets turístics</string>
    <string name="continuar">Presiona qualsevol punt de la pantalla per a continuar</string>
    <string name="info">Aquesta aplicació que patrocina l\'àgencia de viatges Politravel està creada per garantitzar una bona gestió i administració dels paquets turístics que ven a més d\'optimitzar el procés</string>
    <string name="idioma">Selecciona un idioma</string>
    <string name="itinerary">Itinerari</string>
    <string name="ver_mas">VEURE ITINERARI</string>
    <string name="disneyland">Sent la magia de Disneyland Paris</string>
    <string name="avio">Avió</string>
    <string name="barcelona">Barcelona</string>
    <string name="francia">Francia</string>
    <string name="prat">Barcelona, El prat</string>
    <string name="fantasyland">Disfruta de dos dies espectaculars a Fantasyland</string>
    <string name="adventureland">Adventureland</string>
    <string name="frontierland">Frontierland</string>
    <string name="harrypotter_londres">Sumergeix-te en l\'univers Harry Potter de Londres</string>
    <string name="madrid">Madrid</string>
    <string name="londres">Londres</string>
    <string name="barajas">Adolfo Suárez Madrid-Barajas</string>
    <string name="warnerbros">Estudis Warner Bros</string>
    <string name="harrypotter">Revivint Harry Potter</string>
    <string name="portaventura">PortAventura</string>
    <string name="tren">Tren</string>
    <string name="sants_estacio">Sants estació</string>
    <string name="mediterrania">Mediterrània</string>
    <string name="furius_baco">Furius Baco</string>
    <string name="roma_express">Roma express</string>
    <string name="vaixell">Vaixell</string>
    <string name="roma">Roma, Italia</string>
    <string name="port_vell">Port vell de Marsella</string>
    <string name="museos_vaticanos">Museus Vaticans</string>
    <string name="capilla_sixtina">Capilla Sixtina</string>
    <string name="tina_turner">Viu el musical de Tina Turner amb hotel i entrades incluides</string>
    <string name="plaza_mayor">Plaça major</string>
    <string name="mercado">Mercat de Sant Miquel</string>
    <string name="palacio">Palau Reial</string>
    <string name="dias"> dies</string>
    <string name="dias1">Dies: </string>
    <string name="modificar">ITINERARI</string>
    <string name="borrar">BORRAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="mapa">Veure mapa</string>
    <string name="edit">Fes click sobre el text per editar-lo</string>
    <string name="edit_itinerary">Fes click sobre una ciutat per editar-la</string>
    <string name="coordinates_start_point">Afegeix les coordenades del lloc d\'inici</string>
    <string name="coordinates_end_point">Afegeix les coordenades del lloc final</string>
    <string name="name">Escriu un nom pel paquet</string>
    <string name="img_null">Selecciona una imatge per al paquet</string>
    <string name="img_low">Imatge en baixa qualitat</string>
    <string name="img_high">Imatge en alta qualitat</string>
</resources>