<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@color/dark_purple">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:enabled="false"
            android:textStyle="bold"
            android:textSize="35dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:fontFamily="@font/fastup_bold"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/logo_plane"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/name_paquet_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:autoSizeTextType="uniform"
                android:hint="@string/name"
                android:fontFamily="@font/louis_george_cafe"
                android:textColor="@color/black"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/days_paquet_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/shape"
                android:backgroundTint="@color/ligth_purple"
                android:fontFamily="@font/louis_george_cafe"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:hint="@string/dias"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.36"
            android:orientation="horizontal"
            android:gravity="bottom">

            <ImageView
                android:id="@+id/img_paquet_high_add"
                android:layout_width="300dp"
                android:layout_height="150dp"/>

            <ImageView
                android:id="@+id/new_img_paquet"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/icon_edit_black" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/map_start_point_edit"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"/>

                <EditText
                    android:id="@+id/starting_point_paquet_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="25dp"
                    android:hint="@string/coordinates_start_point"
                    android:background="@drawable/subrayar"
                    android:fontFamily="@font/louis_george_cafe"
                    android:textColor="@color/grey"
                    android:autoSizeTextType="uniform"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/icon_destiny" />

                <EditText
                    android:id="@+id/end_point_paquet_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="25dp"
                    android:hint="@string/coordinates_end_point"
                    android:background="@drawable/subrayar"
                    android:fontFamily="@font/louis_george_cafe"
                    android:textColor="@color/grey"
                    android:autoSizeTextType="uniform"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.17"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/transport_img_add"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <Spinner
                android:id="@+id/spinner_transport_add"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:spinnerMode="dropdown"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_purple"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginRight="40dp"
                android:layout_gravity="center"
                android:fontFamily="@font/louis_george_cafe"
                android:text="@string/borrar"
                />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_purple"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_gravity="center"
                android:fontFamily="@font/louis_george_cafe"
                android:text="@string/guardar"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/itinerary_button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modificar"
                android:backgroundTint="@color/dark_purple"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/louis_george_cafe"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>