<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_purple"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="35dp"
            android:layout_marginLeft="40dp"
            android:textColor="@color/white"
            android:fontFamily="@font/fastup_bold"
            android:enabled="false"/>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/logo_plane"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp">

        <EditText
            android:id="@+id/name_itinerary_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/louis_george_cafe"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/button_delete_itinerary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_purple"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginRight="40dp"
            android:layout_gravity="center"
            android:fontFamily="@font/louis_george_cafe"
            android:text="@string/borrar"
            />

        <Button
            android:id="@+id/button_save_itinerary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_purple"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:fontFamily="@font/louis_george_cafe"
            android:text="@string/guardar"/>
    </LinearLayout>

</LinearLayout>